--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,223 +31,6 @@
     <a class="navbar-brand" href="/"><%= fa_icon "trophy" %> <b>SPOODLE</b></a>
 </div>
 <!-- /.navbar-header -->
-
-<ul class="nav navbar-top-links navbar-right">
-<li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
-    </a>
-    <ul class="dropdown-menu dropdown-messages">
-        <li>
-            <a href="#">
-                <div>
-                    <strong>John Smith</strong>
-                                    <span class="pull-right text-muted">
-                                        <em>Yesterday</em>
-                                    </span>
-                </div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <strong>John Smith</strong>
-                                    <span class="pull-right text-muted">
-                                        <em>Yesterday</em>
-                                    </span>
-                </div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <strong>John Smith</strong>
-                                    <span class="pull-right text-muted">
-                                        <em>Yesterday</em>
-                                    </span>
-                </div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a class="text-center" href="#">
-                <strong>Read All Messages</strong>
-                <i class="fa fa-angle-right"></i>
-            </a>
-        </li>
-    </ul>
-    <!-- /.dropdown-messages -->
-</li>
-<!-- /.dropdown -->
-<li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
-    </a>
-    <ul class="dropdown-menu dropdown-tasks">
-        <li>
-            <a href="#">
-                <div>
-                    <p>
-                        <strong>Task 1</strong>
-                        <span class="pull-right text-muted">40% Complete</span>
-                    </p>
-                    <div class="progress progress-striped active">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                            <span class="sr-only">40% Complete (success)</span>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <p>
-                        <strong>Task 2</strong>
-                        <span class="pull-right text-muted">20% Complete</span>
-                    </p>
-                    <div class="progress progress-striped active">
-                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                            <span class="sr-only">20% Complete</span>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <p>
-                        <strong>Task 3</strong>
-                        <span class="pull-right text-muted">60% Complete</span>
-                    </p>
-                    <div class="progress progress-striped active">
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                            <span class="sr-only">60% Complete (warning)</span>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <p>
-                        <strong>Task 4</strong>
-                        <span class="pull-right text-muted">80% Complete</span>
-                    </p>
-                    <div class="progress progress-striped active">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                            <span class="sr-only">80% Complete (danger)</span>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a class="text-center" href="#">
-                <strong>See All Tasks</strong>
-                <i class="fa fa-angle-right"></i>
-            </a>
-        </li>
-    </ul>
-    <!-- /.dropdown-tasks -->
-</li>
-<!-- /.dropdown -->
-<li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
-    </a>
-    <ul class="dropdown-menu dropdown-alerts">
-        <li>
-            <a href="#">
-                <div>
-                    <i class="fa fa-comment fa-fw"></i> New Comment
-                    <span class="pull-right text-muted small">4 minutes ago</span>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                    <span class="pull-right text-muted small">12 minutes ago</span>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <i class="fa fa-envelope fa-fw"></i> Message Sent
-                    <span class="pull-right text-muted small">4 minutes ago</span>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <i class="fa fa-tasks fa-fw"></i> New Task
-                    <span class="pull-right text-muted small">4 minutes ago</span>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">
-                <div>
-                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                    <span class="pull-right text-muted small">4 minutes ago</span>
-                </div>
-            </a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a class="text-center" href="#">
-                <strong>See All Alerts</strong>
-                <i class="fa fa-angle-right"></i>
-            </a>
-        </li>
-    </ul>
-    <!-- /.dropdown-alerts -->
-</li>
-<!-- /.dropdown -->
-<li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
-    </a>
-    <ul class="dropdown-menu dropdown-user">
-        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-        </li>
-        <li><%= link_to edit_user_registration_path do %>
-                <%= fa_icon 'gear' %>
-                Settings
-            <% end %>
-        </li>
-        <li class="divider"></li>
-        <li><%= link_to destroy_user_session_path, :method => :delete do %>
-            <%= fa_icon 'sign-out' %>
-            Logout
-            <% end %>
-        </li>
-    </ul>
-    <!-- /.dropdown-user -->
-</li>
-<!-- /.dropdown -->
-</ul>
-<!-- /.navbar-top-links -->
-
 <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
@@ -266,72 +49,42 @@
                 <a class="active" href="/"><i class="fa fa-home fa-fw"></i> Dashboard</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-calendar fa-fw"></i> Events<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li>
-                        <%= link_to events_path do %>
-                            Upcoming <span class="badge">12</span>
-                        <% end %>
-                    </li>
-                    <li>
-                        <%= link_to events_path do %>
-                            Pending <span class="badge">12</span>
-                        <% end %>                    </li>
-                    <li>
-                        <%= link_to events_path do %>
-                            Invitations <span class="badge">12</span>
-                        <% end %>                    </li>
-                    <li>
-                        <%= link_to events_path do %>
-                            Passed <span class="badge">12</span>
-                        <% end %>                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
+                <%= link_to events_path do %>
+                    <i class="fa fa-calendar fa-fw"></i> Upcoming Events <span class="badge">12</span>
+                <% end %>
             </li>
             <li>
-                <a href="#"><i class="fa fa-line-chart fa-fw"></i> Personal Statistics<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li>
-                        <a href="#">Overall</a>
-                    </li>
-                    <li>
-                        <a href="#">Running</a>
-                    </li>
-                    <li>
-                        <a href="#">Cycling</a>
-                    </li>
-                    <li>
-                        <a href="#">Soccer</a>
-                    </li>
-                    <li>
-                        <a href="#">Boxing</a>
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
+                <%= link_to events_path do %>
+                    <i class="fa fa-spinner fa-fw"></i> Pending Events <span class="badge">7</span>
+                <% end %>                    </li>
+            <li>
+                <%= link_to events_path do %>
+                    <i class="fa fa-flash fa-fw"></i> Invitations <span class="badge">3</span>
+                <% end %>                    </li>
+            <li>
+                <%= link_to events_path do %>
+                    <i class="fa fa-folder fa-fw"></i> Passed Events <span class="badge">54</span>
+                <% end %>
+            </li>
+
+            <li>
+                <a href="#"><i class="fa fa-line-chart fa-fw"></i> Data Center</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-trophy fa-fw"></i> Global Toplist<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li>
-                        <a href="#">Overall</a>
-                    </li>
-                    <li>
-                        <a href="#">Running</a>
-                    </li>
-                    <li>
-                        <a href="#">Cycling</a>
-                    </li>
-                    <li>
-                        <a href="#">Soccer</a>
-                    </li>
-                    <li>
-                        <a href="#">Boxing</a>
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
+                <a href="#"><i class="fa fa-trophy fa-fw"></i> Global Toplist</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-users fa-fw"></i> Friends</a>
+            </li>
+            <li><%= link_to edit_user_registration_path do %>
+                    <%= fa_icon 'gear' %>
+                    Settings
+                <% end %>
+            </li>
+            <li><%= link_to destroy_user_session_path, :method => :delete do %>
+                    <%= fa_icon 'sign-out' %>
+                    Logout
+                <% end %>
             </li>
         </ul>
     </div>
